Unit tests for controllers and services micro transaction-service